--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -156,11 +156,11 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Increase in RM should result in higher MEDV\n",
+    "RM: Assuming the size of all rooms is the same, larger number of rooms in the house would mean more rooms for the owner to use. Increase in RM should result in higher MEDV.\n",
     "\n",
-    "Increase in LSTAT should result in lower MEDV\n",
+    "LSTAT: If the homeowners in neighborhood are poor, they are not able to buy expensive houses. This will lower the price of houses in the neighborhood.  Increase in LSTAT should result in lower MEDV.\n",
     "\n",
-    "Increase in PTRATIO should result in lower MEDV"
+    "PTRATIO: Higher ratio of teachers to students will let the teachers pay more attention to each student and dedicate more time for each student. This will result in better education. Increase in PTRATIO should result in lower MEDV"
    ]
   },
   {
@@ -322,7 +322,11 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "We need a way to measure the accuracy of our models. Keeping a subset of data aside lets us test our model later and figure out if it is underfitted or overfitted."
+    "If we use all the data available to train our model, we would not be able to tell how well the model will work with unseen data. Even if we get the accuracy close to 100%, the model might be overfitted and it will not generalize well. Such a model will fail when some new unseen data is used to make predicitions.\n",
+    "\n",
+    "To figure out if our model generalizes well, we need to test our model with some data that our model is not trained with. We can do that by splitting the data that we already have into training and testing sets. The testing set will only be used to test the model after it has been trained.\n",
+    "\n",
+    "Depending on how the data is split (data points in training vs testing), our model could vary a lot. To solve this problem, we can use K-Fold cross validation."
    ]
   },
   {
@@ -389,7 +393,21 @@
     "\n",
     "Graph: 2, Maximum depth of the model: 3\n",
     "\n",
-    "The score of the training curve get better by increasing the number of points from 0 to 300. After 300, there is no significant change in the training curve. The same is true for testing curve. The training and testing curves do not converge after 300 points.\n",
+    "Trainig curve:\n",
+    "    \n",
+    "    Starts at 1.0 with 1 data point.\n",
+    "    Drops to around 0.85 with 50 data points.\n",
+    "    Reaches around 0.8 at with 350 points.\n",
+    "    General trend: Decreases as more data points are added.\n",
+    "    \n",
+    "Testing Curve:\n",
+    "    \n",
+    "    Start at around 0.0 at with 1 data point.\n",
+    "    Increases to about 0.6 with 50 data points.\n",
+    "    Increases to about 0.75 with 350 data points.\n",
+    "    General trend: Increases as more data points are added.\n",
+    "\n",
+    "The trainig and testing curves are converging to approximately 0.8 as more data points are added.\n",
     "\n",
     "Adding any more points would not benefit the model because the training and testing curves show almost no change after 300 points."
    ]
@@ -519,9 +537,11 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "K-fold technique splits the data into K different sets of equal sizes called folds. Each fold will act as testing data once, while the other folds act as training data. Since each fold acts as testing data once, there will be K different combinations of testing and training data.\n",
+    "Without K-fold cross validation, the training data will be split into training and cross validation data only once. The grid search would be only able to do one iteration for each hyper parameter combmination. The output of the grid search will be biased based on which data points end up in training (or cross validation) sets. This will lead to a high variance in our model and the model will not perform well with unseen data.\n",
     "\n",
-    "K-fold technique can help Grid Search by reducing the variance. Grid Search can run K times for the same model with the same data (different folds acting as testing set). The accuracy scores can be averaged to fill the grid."
+    "K-fold technique splits the training data into K different sets of equal sizes called folds. Each fold will act as cross validation data once, while the other folds act as training data. Since each fold acts as cross validation data once, there will be K different combinations of training and cross validation data.\n",
+    "\n",
+    "With K-fold techique, the grid search will be able to iterate multile times (K times) for the same hyper parameters with different combinations of training and cross validation data. The results will be averaged and the bias will be much smaller compared to only one iteration without the k-fold. So, the grid search will be able to find an estimation of hyper parameters that will be able to generalize much better. This will reduce the variance in our model and work much better with the unseen data."
    ]
   },
   {
@@ -696,7 +716,9 @@
     "**Answer: **\n",
     "\n",
     "Predicted selling price for Client 1's home: $403,025.00\n",
+    "\n",
     "Predicted selling price for Client 2's home: $237,478.72\n",
+    "\n",
     "Predicted selling price for Client 3's home: $931,636.36\n",
     "\n",
     "These prices seem reasonable.\n",
